--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,9 @@ All colors MUST be HSL.
     --sidebar-border: 220 13% 91%;
 
     --sidebar-ring: 217.2 91.2% 59.8%;
+
+    --sky-blue : 205, 40%, 76%, 1;
+    --pale-blue : 200, 45%, 87%, 1;
   }
 
   .dark {
@@ -97,6 +100,9 @@ All colors MUST be HSL.
     --sidebar-accent-foreground: 240 4.8% 95.9%;
     --sidebar-border: 240 3.7% 15.9%;
     --sidebar-ring: 217.2 91.2% 59.8%;
+
+    --sky-blue : 205, 40%, 76%, 1;
+    --pale-blue : 200, 45%, 87%, 1;
   }
 }
 
